updated env to install pkg from github

--- a/environment.yml
+++ b/environment.yml
@@ -13,3 +13,4 @@ dependencies:
   - pandas
   - pip:
     - git+https://github.com/intake/intake.git
+    - git+https://github.com/axiom-data-science/cook-inlet-catalogs.git
