--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -22,7 +22,7 @@ dependencies:
    - pip
    - pip:
      - git+https://github.com/intake/intake.git
-     - git+https://github.com/axiom-data-science/cook-inlet-catalogs.git
+    #  - git+https://github.com/axiom-data-science/cook-inlet-catalogs.git
      - docrep<=0.2.7    
      - nbsphinx
      - jupyter_client
