--- a/docs/environment.yml
+++ b/docs/environment.yml
@@ -1,12 +1,24 @@
 name: cook-inlet-catalogs_docs
+channels:
+  - conda-forge
 dependencies:
-   - python=3.8
+   - python=3.11
    # If your docs code examples depend on other packages add them here
+   - aiohttp
    - cartopy
    - cf_pandas
+   - cf_xarray
+   - cmocean
+   - geoviews
+   - h5netcdf
+   - hvplot
    - jupyter
+   - jupyter_bokeh
    - matplotlib-base
+   - numpy
    - pandas
+   - pyproj
+   - requests
    # These are needed for the docs themselves
    - furo
    - numpydoc
@@ -17,10 +29,13 @@ dependencies:
    - nbformat
    - recommonmark
    - ipykernel
-   - pillow==9.4.0  # Otherwise get error ImportError: libtiff.so.5: cannot open shared object file: No such file or directory
+  #  - pillow==9.4.0  # Otherwise get error ImportError: libtiff.so.5: cannot open shared object file: No such file or directory
    - pandoc
    - pip
    - pip:
+     - intake-coops
+     - intake-erddap
+    #  - papermill
      - git+https://github.com/intake/intake.git
     #  - git+https://github.com/axiom-data-science/cook-inlet-catalogs.git
      - docrep<=0.2.7    
