changing catalogs to not use simplecache

--- a/cook_inlet_catalogs/catalogs/ctd_transects_barabara_to_bluff_2002_2003.yaml
+++ b/cook_inlet_catalogs/catalogs/ctd_transects_barabara_to_bluff_2002_2003.yaml
@@ -11,11 +11,11 @@ aliases:
   Cruise 8: Cruise 8
   Cruise 9: Cruise 9
 data:
-  1ee5461a39ae5e7a:
+  7cec9a7bfdd2fa74:
     datatype: intake.readers.datatypes:CSV
     kwargs:
       storage_options: null
-      url: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      url: https://researchworkspace.com/files/42396691/barabara.csv
     metadata: {}
     user_parameters: {}
 entries:
@@ -26,7 +26,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(b4c4b432d9181ead)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -58,13 +58,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 1: 2002-07-23 08:28:00'
@@ -78,20 +78,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 1: 2002-07-23 08:28:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -102,7 +102,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(b4c4b432d9181ead)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -134,13 +134,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 10: 2003-05-19 13:17:00'
@@ -154,20 +154,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 10: 2003-05-19 13:17:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -178,7 +178,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(b4c4b432d9181ead)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -210,13 +210,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 11: 2003-06-21 11:20:00'
@@ -230,20 +230,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 11: 2003-06-21 11:20:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -254,7 +254,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(b4c4b432d9181ead)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -286,13 +286,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 2: 2002-09-07 11:05:00'
@@ -306,20 +306,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 2: 2002-09-07 11:05:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -330,7 +330,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(b4c4b432d9181ead)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -362,13 +362,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 3: 2002-09-25 11:55:00'
@@ -382,20 +382,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 3: 2002-09-25 11:55:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -406,7 +406,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(b4c4b432d9181ead)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -438,13 +438,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 4: 2002-11-11 14:45:00'
@@ -458,20 +458,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 4: 2002-11-11 14:45:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -482,7 +482,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(b4c4b432d9181ead)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -514,13 +514,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 5: 2002-12-11 16:39:00'
@@ -534,20 +534,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 5: 2002-12-11 16:39:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -558,7 +558,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(b4c4b432d9181ead)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -590,13 +590,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 6: 2003-01-31 15:56:00'
@@ -610,20 +610,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 6: 2003-01-31 15:56:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -634,7 +634,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(b4c4b432d9181ead)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -666,13 +666,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 7: 2003-02-18 16:50:00'
@@ -686,20 +686,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 7: 2003-02-18 16:50:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -710,7 +710,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(b4c4b432d9181ead)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -742,13 +742,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 8: 2003-03-31 15:27:00'
@@ -762,20 +762,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 8: 2003-03-31 15:27:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -786,7 +786,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(b4c4b432d9181ead)}'
+      - - '{data(c9dbefd12ed0f225)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -818,13 +818,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 9: 2003-04-17 12:35:00'
@@ -838,33 +838,29 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - distance [km]
-          - Lat (N)
-          - Temperature (C)
           - Long (E)
-          - Salinity
-          - Depth (m)
+          - Station
+          - Lat (N)
+          - distance [km]
           - date_time
+          - Depth (m)
+          - Temperature (C)
           kind: scatter
           shared_axes: false
           title: 'Cruise 9: 2003-04-17 12:35:00'
           width: 500
           x: distance [km]
           y: Depth (m)
-      urlpath: simplecache://::https://researchworkspace.com/files/42396691/barabara.csv
+      urlpath: https://researchworkspace.com/files/42396691/barabara.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
-  b4c4b432d9181ead:
+  c9dbefd12ed0f225:
     kwargs:
       args:
-      - '{data(1ee5461a39ae5e7a)}'
+      - '{data(7cec9a7bfdd2fa74)}'
       parse_dates:
       - date_time
-      storage_options:
-        simplecache:
-          cache_storage: /Users/kthyng/Library/Caches/cook-inlet-catalogs
-          same_names: true
     metadata: {}
     output_instance: pandas:DataFrame
     reader: intake.readers.readers:PandasCSV
@@ -874,8 +870,8 @@ metadata:
   header_names: null
   included: true
   key_variables:
-  - salt
   - temp
+  - salt
   map:
     coastline: false
     geo: true
