--- a/cook_inlet_catalogs/catalogs/ctd_transects_uaf.yaml
+++ b/cook_inlet_catalogs/catalogs/ctd_transects_uaf.yaml
@@ -9,11 +9,11 @@ aliases:
   Transect_08: Transect_08
   Transect_09: Transect_09
 data:
-  0fe743491d86c382:
+  36dfdc7aa5208855:
     datatype: intake.readers.datatypes:CSV
     kwargs:
       storage_options: null
-      url: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      url: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     metadata: {}
     user_parameters: {}
 entries:
@@ -24,7 +24,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(ad17d6294f22f58f)}'
+      - - '{data(d3418f3e690c76b1)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -56,13 +56,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Sal [PSU]
+          - Temperature
+          - Station
+          - Pressure
           - distance [km]
           - Lat
-          - Lon
-          - Temperature
           - date_time
-          - Pressure
+          - Lon
           kind: scatter
           shared_axes: false
           title: '2003-08-09 20:36:00'
@@ -76,20 +76,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Sal [PSU]
+          - Temperature
+          - Station
+          - Pressure
           - distance [km]
           - Lat
-          - Lon
-          - Temperature
           - date_time
-          - Pressure
+          - Lon
           kind: scatter
           shared_axes: false
           title: '2003-08-09 20:36:00'
           width: 500
           x: distance [km]
           y: Pressure
-      urlpath: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      urlpath: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -100,7 +100,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(ad17d6294f22f58f)}'
+      - - '{data(d3418f3e690c76b1)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -132,13 +132,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Sal [PSU]
+          - Temperature
+          - Station
+          - Pressure
           - distance [km]
           - Lat
-          - Lon
-          - Temperature
           - date_time
-          - Pressure
+          - Lon
           kind: scatter
           shared_axes: false
           title: '2003-08-09 23:12:00'
@@ -152,20 +152,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Sal [PSU]
+          - Temperature
+          - Station
+          - Pressure
           - distance [km]
           - Lat
-          - Lon
-          - Temperature
           - date_time
-          - Pressure
+          - Lon
           kind: scatter
           shared_axes: false
           title: '2003-08-09 23:12:00'
           width: 500
           x: distance [km]
           y: Pressure
-      urlpath: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      urlpath: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -176,7 +176,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(ad17d6294f22f58f)}'
+      - - '{data(d3418f3e690c76b1)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -208,13 +208,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Sal [PSU]
+          - Temperature
+          - Station
+          - Pressure
           - distance [km]
           - Lat
-          - Lon
-          - Temperature
           - date_time
-          - Pressure
+          - Lon
           kind: scatter
           shared_axes: false
           title: '2003-08-10 01:35:00'
@@ -228,20 +228,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Sal [PSU]
+          - Temperature
+          - Station
+          - Pressure
           - distance [km]
           - Lat
-          - Lon
-          - Temperature
           - date_time
-          - Pressure
+          - Lon
           kind: scatter
           shared_axes: false
           title: '2003-08-10 01:35:00'
           width: 500
           x: distance [km]
           y: Pressure
-      urlpath: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      urlpath: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -252,7 +252,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(ad17d6294f22f58f)}'
+      - - '{data(d3418f3e690c76b1)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -284,13 +284,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Sal [PSU]
+          - Temperature
+          - Station
+          - Pressure
           - distance [km]
           - Lat
-          - Lon
-          - Temperature
           - date_time
-          - Pressure
+          - Lon
           kind: scatter
           shared_axes: false
           title: '2003-08-10 04:14:00'
@@ -304,20 +304,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Sal [PSU]
+          - Temperature
+          - Station
+          - Pressure
           - distance [km]
           - Lat
-          - Lon
-          - Temperature
           - date_time
-          - Pressure
+          - Lon
           kind: scatter
           shared_axes: false
           title: '2003-08-10 04:14:00'
           width: 500
           x: distance [km]
           y: Pressure
-      urlpath: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      urlpath: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -328,7 +328,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(ad17d6294f22f58f)}'
+      - - '{data(d3418f3e690c76b1)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -360,13 +360,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Sal [PSU]
+          - Temperature
+          - Station
+          - Pressure
           - distance [km]
           - Lat
-          - Lon
-          - Temperature
           - date_time
-          - Pressure
+          - Lon
           kind: scatter
           shared_axes: false
           title: '2003-08-10 07:16:00'
@@ -380,20 +380,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Sal [PSU]
+          - Temperature
+          - Station
+          - Pressure
           - distance [km]
           - Lat
-          - Lon
-          - Temperature
           - date_time
-          - Pressure
+          - Lon
           kind: scatter
           shared_axes: false
           title: '2003-08-10 07:16:00'
           width: 500
           x: distance [km]
           y: Pressure
-      urlpath: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      urlpath: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -404,7 +404,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(ad17d6294f22f58f)}'
+      - - '{data(d3418f3e690c76b1)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -436,13 +436,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Sal [PSU]
+          - Temperature
+          - Station
+          - Pressure
           - distance [km]
           - Lat
-          - Lon
-          - Temperature
           - date_time
-          - Pressure
+          - Lon
           kind: scatter
           shared_axes: false
           title: '2003-08-10 10:11:00'
@@ -456,20 +456,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Sal [PSU]
+          - Temperature
+          - Station
+          - Pressure
           - distance [km]
           - Lat
-          - Lon
-          - Temperature
           - date_time
-          - Pressure
+          - Lon
           kind: scatter
           shared_axes: false
           title: '2003-08-10 10:11:00'
           width: 500
           x: distance [km]
           y: Pressure
-      urlpath: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      urlpath: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -480,7 +480,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(ad17d6294f22f58f)}'
+      - - '{data(d3418f3e690c76b1)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -512,13 +512,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Sal [PSU]
+          - Temperature
+          - Station
+          - Pressure
           - distance [km]
           - Lat
-          - Lon
-          - Temperature
           - date_time
-          - Pressure
+          - Lon
           kind: scatter
           shared_axes: false
           title: '2003-08-10 14:01:00'
@@ -532,20 +532,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Sal [PSU]
+          - Temperature
+          - Station
+          - Pressure
           - distance [km]
           - Lat
-          - Lon
-          - Temperature
           - date_time
-          - Pressure
+          - Lon
           kind: scatter
           shared_axes: false
           title: '2003-08-10 14:01:00'
           width: 500
           x: distance [km]
           y: Pressure
-      urlpath: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      urlpath: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -556,7 +556,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(ad17d6294f22f58f)}'
+      - - '{data(d3418f3e690c76b1)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -588,13 +588,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Sal [PSU]
+          - Temperature
+          - Station
+          - Pressure
           - distance [km]
           - Lat
-          - Lon
-          - Temperature
           - date_time
-          - Pressure
+          - Lon
           kind: scatter
           shared_axes: false
           title: '2003-08-10 17:09:00'
@@ -608,20 +608,20 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Sal [PSU]
+          - Temperature
+          - Station
+          - Pressure
           - distance [km]
           - Lat
-          - Lon
-          - Temperature
           - date_time
-          - Pressure
+          - Lon
           kind: scatter
           shared_axes: false
           title: '2003-08-10 17:09:00'
           width: 500
           x: distance [km]
           y: Pressure
-      urlpath: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      urlpath: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
@@ -632,7 +632,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       steps:
-      - - '{data(ad17d6294f22f58f)}'
+      - - '{data(d3418f3e690c76b1)}'
         - []
         - {}
       - - '{func(intake.readers.convert:GenericFunc)}'
@@ -664,13 +664,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Sal [PSU]
+          - Temperature
+          - Station
+          - Pressure
           - distance [km]
           - Lat
-          - Lon
-          - Temperature
           - date_time
-          - Pressure
+          - Lon
           kind: scatter
           shared_axes: false
           title: '2003-08-10 20:26:00'
@@ -684,33 +684,29 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Sal [PSU]
+          - Temperature
+          - Station
+          - Pressure
           - distance [km]
           - Lat
-          - Lon
-          - Temperature
           - date_time
-          - Pressure
+          - Lon
           kind: scatter
           shared_axes: false
           title: '2003-08-10 20:26:00'
           width: 500
           x: distance [km]
           y: Pressure
-      urlpath: simplecache://::https://researchworkspace.com/files/42202256/TS%20downcasts.csv
+      urlpath: https://researchworkspace.com/files/42202256/TS%20downcasts.csv
     output_instance: pandas:DataFrame
     reader: intake.readers.convert:Pipeline
     user_parameters: {}
-  ad17d6294f22f58f:
+  d3418f3e690c76b1:
     kwargs:
       args:
-      - '{data(0fe743491d86c382)}'
+      - '{data(36dfdc7aa5208855)}'
       parse_dates:
       - date_time
-      storage_options:
-        simplecache:
-          cache_storage: /Users/kthyng/Library/Caches/cook-inlet-catalogs
-          same_names: true
     metadata: {}
     output_instance: pandas:DataFrame
     reader: intake.readers.readers:PandasCSV
@@ -720,8 +716,8 @@ metadata:
   header_names: null
   included: true
   key_variables:
-  - salt
   - temp
+  - salt
   map:
     coastline: false
     geo: true
