updated requirements in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,7 +54,23 @@ author_email = kristen@axds.co
 ### make sure to fill in your dependencies!
 [options]
 install_requires =
+    aiohttp
+    appdirs
+    cartopy
+    cf_pandas
+    cf_xarray
+    cmocean
+    geoviews
+    h5netcdf
+    hvplot
+    jupyter
+    jupyter_bokeh
+    matplotlib-base
     numpy
+    openpyxl
+    pandas
+    pip
+    pyproj
     requests
 setup_requires= 
     setuptools_scm
