updated requirements in setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -65,7 +65,7 @@ install_requires =
     hvplot
     jupyter
     jupyter_bokeh
-    matplotlib-base
+    matplotlib
     numpy
     openpyxl
     pandas
