--- a/cook_inlet_catalogs/catalogs/ctd_transects_cmi_uaf.yaml
+++ b/cook_inlet_catalogs/catalogs/ctd_transects_cmi_uaf.yaml
@@ -25,6 +25,7 @@ entries:
       - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
+      - pandas:DataFrame
       steps:
       - - '{data(f22cf3f5e24d7150)}'
         - []
@@ -46,6 +47,9 @@ entries:
         - - Cruise
           - 1
         - func: '{func(cook_inlet_catalogs.utils:select_df_by_column)}'
+      - - '{func(intake.readers.convert:GenericFunc)}'
+        - []
+        - func: '{func(cook_inlet_catalogs.utils:calculate_distance)}'
     metadata:
       featuretype: trajectoryProfile
       key_variables:
@@ -68,13 +72,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2004-05-21'
@@ -88,13 +92,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2004-05-21'
@@ -108,6 +112,7 @@ entries:
   Cruise-02:
     kwargs:
       out_instances:
+      - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
@@ -133,6 +138,9 @@ entries:
         - - Cruise
           - 2
         - func: '{func(cook_inlet_catalogs.utils:select_df_by_column)}'
+      - - '{func(intake.readers.convert:GenericFunc)}'
+        - []
+        - func: '{func(cook_inlet_catalogs.utils:calculate_distance)}'
     metadata:
       featuretype: trajectoryProfile
       key_variables:
@@ -155,13 +163,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2004-06-24'
@@ -175,13 +183,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2004-06-24'
@@ -195,6 +203,7 @@ entries:
   Cruise-03:
     kwargs:
       out_instances:
+      - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
@@ -220,6 +229,9 @@ entries:
         - - Cruise
           - 3
         - func: '{func(cook_inlet_catalogs.utils:select_df_by_column)}'
+      - - '{func(intake.readers.convert:GenericFunc)}'
+        - []
+        - func: '{func(cook_inlet_catalogs.utils:calculate_distance)}'
     metadata:
       featuretype: trajectoryProfile
       key_variables:
@@ -242,13 +254,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2004-08-08'
@@ -262,13 +274,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2004-08-08'
@@ -282,6 +294,7 @@ entries:
   Cruise-04:
     kwargs:
       out_instances:
+      - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
@@ -307,6 +320,9 @@ entries:
         - - Cruise
           - 4
         - func: '{func(cook_inlet_catalogs.utils:select_df_by_column)}'
+      - - '{func(intake.readers.convert:GenericFunc)}'
+        - []
+        - func: '{func(cook_inlet_catalogs.utils:calculate_distance)}'
     metadata:
       featuretype: trajectoryProfile
       key_variables:
@@ -329,13 +345,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2004-09-17'
@@ -349,13 +365,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2004-09-17'
@@ -369,6 +385,7 @@ entries:
   Cruise-05:
     kwargs:
       out_instances:
+      - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
@@ -394,6 +411,9 @@ entries:
         - - Cruise
           - 5
         - func: '{func(cook_inlet_catalogs.utils:select_df_by_column)}'
+      - - '{func(intake.readers.convert:GenericFunc)}'
+        - []
+        - func: '{func(cook_inlet_catalogs.utils:calculate_distance)}'
     metadata:
       featuretype: trajectoryProfile
       key_variables:
@@ -416,13 +436,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2004-10-09'
@@ -436,13 +456,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2004-10-09'
@@ -456,6 +476,7 @@ entries:
   Cruise-06:
     kwargs:
       out_instances:
+      - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
@@ -481,6 +502,9 @@ entries:
         - - Cruise
           - 6
         - func: '{func(cook_inlet_catalogs.utils:select_df_by_column)}'
+      - - '{func(intake.readers.convert:GenericFunc)}'
+        - []
+        - func: '{func(cook_inlet_catalogs.utils:calculate_distance)}'
     metadata:
       featuretype: trajectoryProfile
       key_variables:
@@ -503,13 +527,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2005-03-30'
@@ -523,13 +547,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2005-03-30'
@@ -543,6 +567,7 @@ entries:
   Cruise-07:
     kwargs:
       out_instances:
+      - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
@@ -568,6 +593,9 @@ entries:
         - - Cruise
           - 7
         - func: '{func(cook_inlet_catalogs.utils:select_df_by_column)}'
+      - - '{func(intake.readers.convert:GenericFunc)}'
+        - []
+        - func: '{func(cook_inlet_catalogs.utils:calculate_distance)}'
     metadata:
       featuretype: trajectoryProfile
       key_variables:
@@ -590,13 +618,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2005-05-02'
@@ -610,13 +638,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2005-05-02'
@@ -630,6 +658,7 @@ entries:
   Cruise-08:
     kwargs:
       out_instances:
+      - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
@@ -655,6 +684,9 @@ entries:
         - - Cruise
           - 8
         - func: '{func(cook_inlet_catalogs.utils:select_df_by_column)}'
+      - - '{func(intake.readers.convert:GenericFunc)}'
+        - []
+        - func: '{func(cook_inlet_catalogs.utils:calculate_distance)}'
     metadata:
       featuretype: trajectoryProfile
       key_variables:
@@ -677,13 +709,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2005-06-01'
@@ -697,13 +729,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2005-06-01'
@@ -717,6 +749,7 @@ entries:
   Cruise-09:
     kwargs:
       out_instances:
+      - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
@@ -742,6 +775,9 @@ entries:
         - - Cruise
           - 9
         - func: '{func(cook_inlet_catalogs.utils:select_df_by_column)}'
+      - - '{func(intake.readers.convert:GenericFunc)}'
+        - []
+        - func: '{func(cook_inlet_catalogs.utils:calculate_distance)}'
     metadata:
       featuretype: trajectoryProfile
       key_variables:
@@ -764,13 +800,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2005-08-26'
@@ -784,13 +820,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2005-08-26'
@@ -804,6 +840,7 @@ entries:
   Cruise-10:
     kwargs:
       out_instances:
+      - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
       - pandas:DataFrame
@@ -829,6 +866,9 @@ entries:
         - - Cruise
           - 10
         - func: '{func(cook_inlet_catalogs.utils:select_df_by_column)}'
+      - - '{func(intake.readers.convert:GenericFunc)}'
+        - []
+        - func: '{func(cook_inlet_catalogs.utils:calculate_distance)}'
     metadata:
       featuretype: trajectoryProfile
       key_variables:
@@ -851,13 +891,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2005-10-03'
@@ -871,13 +911,13 @@ entries:
           flip_yaxis: true
           height: 300
           hover_cols:
-          - Latitude
+          - distance [km]
           - Depth [m]
           - Longitude
-          - Temperature
+          - Latitude
           - Station
-          - distance [km]
           - datetime
+          - Temperature
           kind: scatter
           shared_axes: false
           title: '2005-10-03'
@@ -938,8 +978,8 @@ metadata:
   header_names: null
   included: true
   key_variables:
-  - temp
   - salt
+  - temp
   map:
     coastline: false
     geo: true
