--- a/environment.yml
+++ b/environment.yml
@@ -27,7 +27,8 @@ dependencies:
   - requests
   - pip:
     - intake-coops
-    - noaa_coops>=0.3.2
+    # - noaa_coops>=0.3.2
+    - git+https://github.com/kthyng/noaa_coops.git@toml
     - intake-erddap
     # - papermill
     - git+https://github.com/intake/intake.git
